working app locak system

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Wingsfly</string>
+    <string name="accessibility_service_description">Required for app lock functionality</string>
 </resources>
